--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+     <title>SevenTeam</title>
+</head
 <body>
 <h1>This is my test server page¡£</h1>
 </body>
